--- a/src/ExhibitorModule/Views/MainPage.xaml
+++ b/src/ExhibitorModule/Views/MainPage.xaml
@@ -9,8 +9,12 @@
              xmlns:windows="clr-namespace:Xamarin.Forms.PlatformConfiguration.WindowsSpecific;assembly=Xamarin.Forms.Core" 
              xmlns:controls="clr-namespace:ExhibitorModule.Controls;assembly=ExhibitorModule.Controls"
              xmlns:strings="clr-namespace:ExhibitorModule.Strings;assembly=ExhibitorModule"
+             xmlns:ia="clr-namespace:IntelliAbb.Xamarin.Controls;assembly=IntelliAbb.Xamarin.Controls"
+             xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             xmlns:fft="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
              Title="{Binding Title}" 
-             x:Class="ExhibitorModule.Views.MainPage">
+             x:Class="ExhibitorModule.Views.MainPage"
+             x:Name="this">
     
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{prism:NavigateTo LookupPage}" Icon="search"/>
@@ -29,12 +33,52 @@
             CancelButtonColor="White"/>
         <ListView Grid.Row="1" 
                   ItemsSource="{Binding Leads}" 
-                  IsPullToRefreshEnabled="true" 
-                  RefreshCommand="{Binding LoadLeadsCommand}"
-                  IsRefreshing="{Binding IsBusy}">
+                  HasUnevenRows="true"
+                  SeparatorVisibility="None">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <ImageCell ImageSource="{Binding Avatar}" Text="{Binding FirstName}" Detail="{Binding Company}"/>
+                    <ViewCell>
+                        <Grid>
+                            <ia:CardView Margin="16,8" Visual="Material" Padding="8">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="3*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <ff:CachedImage Source="{Binding Avatar}" 
+                                                    Grid.RowSpan="2" 
+                                                    HorizontalOptions="Start"
+                                                    InputTransparent="true">
+                                        <ff:CachedImage.Transformations>
+                                            <fft:CircleTransformation />
+                                        </ff:CachedImage.Transformations>
+                                    </ff:CachedImage>
+                                    <Label Text="{Binding FirstName}" FontSize="Medium" Grid.Column="1"
+                                            InputTransparent="true"/>
+                                    <StackLayout Orientation="Horizontal" Grid.Column="1" Grid.Row="1" 
+                                                 InputTransparent="true">
+                                        <Label Text="{Binding Title}" FontSize="Small" TextColor="Gray"/>
+                                        <Label Text="|" FontSize="Small" TextColor="Gray"/>
+                                        <Label Text="{Binding Company}" FontSize="Small" TextColor="Gray"/>
+                                    </StackLayout>
+                                    
+                                    <ImageButton Source="notes" 
+                                                 Command="{Binding BindingContext.ShowNotes, Source={x:Reference this}}" 
+                                                 CommandParameter="{Binding .}"
+                                                 HeightRequest="24"
+                                                 WidthRequest="24"
+                                                 Grid.RowSpan="2"
+                                                 Grid.Column="1"
+                                                 HorizontalOptions="End"/>
+                                </Grid>
+                            </ia:CardView>
+                        </Grid>
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>    
