--- a/src/ExhibitorModule/Views/LookupPage.xaml
+++ b/src/ExhibitorModule/Views/LookupPage.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="ExhibitorModule.Views.LookupPage"
@@ -45,16 +45,24 @@
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="3*"/>
                                         </Grid.ColumnDefinitions>
-                                        <ff:CachedImage Source="{Binding Avatar}" Grid.RowSpan="2" HorizontalOptions="Start">
+                                        <ff:CachedImage Source="{Binding Avatar}"
+                                                        Grid.RowSpan="2" 
+                                                        HorizontalOptions="Start">
                                             <ff:CachedImage.Transformations>
                                                 <fft:CircleTransformation />
                                             </ff:CachedImage.Transformations>
                                         </ff:CachedImage>
                                         <Label Text="{Binding FirstName}" FontSize="Medium" Grid.Column="1"/>
                                         <StackLayout Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
-                                            <Label Text="{Binding Title}" FontSize="Small" TextColor="Gray"/>
-                                            <Label Text="|" FontSize="Small" TextColor="Gray"/>
-                                            <Label Text="{Binding Company}" FontSize="Small" TextColor="Gray"/>
+                                            <Label Text="{Binding Title}" 
+                                               FontSize="Small" 
+                                               TextColor="Gray" 
+                                               FontAttributes="Bold"
+                                               VerticalOptions="End"/>
+                                        <Label Text="{Binding Company}" 
+                                               FontSize="Micro" 
+                                               TextColor="Gray" 
+                                               VerticalOptions="End"/>
                                         </StackLayout>
                                     </Grid>
                                 </ia:CardView>
