--- a/src/ExhibitorModule/Views/LookupPage.xaml
+++ b/src/ExhibitorModule/Views/LookupPage.xaml
@@ -8,8 +8,13 @@
              xmlns:ia="clr-namespace:IntelliAbb.Xamarin.Controls;assembly=IntelliAbb.Xamarin.Controls"
              xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              xmlns:fft="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+             xmlns:conv="clr-namespace:ExhibitorModule.Controls.Converters;assembly=ExhibitorModule"
              Title="{Binding Title}">
-    
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <conv:GravatarConverter x:Key="GravatarConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <!--<ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{prism:NavigateTo '../AddPersonPage'}" Icon="addperson"/>
     </ContentPage.ToolbarItems>-->
@@ -41,18 +46,21 @@
                                             <RowDefinition Height="*"/>
                                         </Grid.RowDefinitions>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="3*"/>
                                         </Grid.ColumnDefinitions>
-                                        <ff:CachedImage Source="{Binding GravatarUri}"
-                                                        Grid.RowSpan="2"
-                                                        WidthRequest="48"
-                                                        HeightRequest="48"
-                                                        Aspect="AspectFit">
-                                            <ff:CachedImage.Transformations>
-                                                <fft:CircleTransformation />
-                                            </ff:CachedImage.Transformations>
-                                        </ff:CachedImage>
+                                        <ff:CachedImage Source="{Binding GravatarUri, 
+                                                        Converter={x:StaticResource GravatarConverter},
+                                                        ConverterParameter=76}" 
+                                                    Grid.RowSpan="2" 
+                                                    HorizontalOptions="Start"
+                                                    InputTransparent="true"
+                                                    HeightRequest="76"
+                                                    WidthRequest="76">
+                                        <ff:CachedImage.Transformations>
+                                            <fft:CircleTransformation />
+                                        </ff:CachedImage.Transformations>
+                                    </ff:CachedImage>
                                         <Label FontSize="16" 
                                                Grid.Column="1"
                                                InputTransparent="true"
@@ -78,6 +86,12 @@
                                             </Trigger>
                                         </Label.Triggers>
                                     </Label>
+                                        <Image Grid.RowSpan="2"
+                                               Grid.Column="1"
+                                               VerticalOptions="Center"
+                                               HorizontalOptions="End"
+                                               Margin="12"
+                                               Source="add"/>
                                     </Grid>
                                 </ia:CardView>
                             </Grid>
